
2024-12-31  Simon Sobisch <simonsobisch@gnu.org>

	* common.c [WITH_EXTENDED_SCREENIO]: adjusted curses includes/defines
	  used for info output to include panel header definitions and XCurses

2024-12-23  David Declerck <david.declerck@ocamlpro.com>

	* termio.c (clean_double): skip more than a single leading
	  zero in exponent display

2024-12-18  David Declerck <david.declerck@ocamlpro.com>

	* string.c: fix a bug where the source of STRING/UNSTRING/INSPECT
	  is overwritten, by restoring the *_copy fields that were removed
	  with the change on 2024-02-26

2024-12-11  Emilien Lemaire <emilien.lemaire@ocamlpro.com>

	* fileio.c: fixed Bug #1032 by always using global thread-static variable
	  bdb_app_data pointer to access the collating sequence function

2024-12-09  David Declerck <david.declerck@ocamlpro.com>

	* move.c (optimized_move_display_to_edited): normalize numeric data
	* move.c (cob_move): extend use of optimized_move_display_to_edited
	  to more cases (i.e. different source and destination sign, leading
	  sign, non-separate sign)

2024-12-09  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (optimized_move_display_to_edited): fixed additional bug
	  reported with bug #1008: BLANK WHEN ZERO not working on signed
	  NUMERIC-EDITED fields

2024-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c [WITH_PANELS]: replace use of ncurses extension ceiling_panel()
	  with X/Open Curses function panel_below()

2024-11-22  David Declerck <david.declerck@ocamlpro.com>

	* move.c (optimized_move_display_to_edited): minor refactoring
	* exception.def, move.c: added definition for COBOL2025
	  COB_EC_DATA_NULL + COB_EC_DATA_TRUNCATION (currently not used)

2024-11-22  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (optimized_move_display_to_edited): fixed
	  Bug #1008: regression in move to numeric edited
	  items with insertion symbols B, 0 and /

2024-11-19  Simon Sobisch <simonsobisch@gnu.org>
