@@ -793,7 +793,6 @@ bdb_setkey (cob_file *f, int idx)
 	struct indexed_file	*p = f->file;
 	int	len;
 
-	memset (p->savekey, 0, p->maxkeylen);
 	len = bdb_savekey (f, p->savekey, f->record->data, idx);
 	p->key.data = p->savekey;
 	p->key.size = (cob_dbtsize_t) len;
@@ -923,6 +922,9 @@ bdb_bt_compare (DB *db, const DBT *k1, const DBT *k2
 {
 	const unsigned char *col = (unsigned char *)DBT_GET_APP_DATA (k1);
 	COB_UNUSED (db);
+#if DB_VERSION_MAJOR >= 6
+	locp = NULL;	/* docs: must be set to NULL or corruption can occur ... */
+#endif
 #ifdef USE_BDB_KEYDIFF /* flag passed with CPPFLAGS */
 	return cob_cmp_strings (k1->data, k2->data, (size_t)k1->size, (size_t)k2->size, col);
 #else
@@ -936,9 +938,6 @@ bdb_bt_compare (DB *db, const DBT *k1, const DBT *k2
 		cob_hard_failure ();
 	}
 	/* LCOV_EXCL_STOP */
-#if DB_VERSION_MAJOR >= 6
-	locp = NULL;	/* docs: must be set to NULL or corruption can occur ... */
-#endif
 	return indexed_key_compare (k1->data, k2->data, k2->size, col);
 #endif /* USE_BDB_KEYDIFF */
 }
@@ -3909,7 +3908,10 @@ indexed_start_internal (cob_file *f, const int cond, cob_field *key,
 
 	/* Search */
 	bdb_setkey (f, p->key_index);
-	p->key.size = (cob_dbtsize_t)partlen;		/* may be partial key */
+	if (partlen < fullkeylen) {
+		memset((char *)p->key.data + partlen, 0, fullkeylen - partlen);
+	}
+
 	/* The open cursor makes this function atomic */
 	if (p->key_index != 0) {
 		p->db[0]->cursor (p->db[0], NULL, &p->cursor[0], 0);
